<!--
  ~ Copyright (c) 2026 chenbrush
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="filter_7_days">7 Days</string>
    <string name="filter_10_days">10 Days</string>
    <string name="filter_15_days">15 Days</string>
    <string name="filter_30_days">1 Month</string>
    <string name="app_name">Today To Eat</string>
    <string name="title">EAT?</string>
    <string name="next_time">Next time</string>
    <string name="all_day">All day</string>
    <string name="result">Click the button to output the result</string>
    <string name="settings">Setting</string>
    <string name="history">History</string>
    <string name="list">Shops list</string>
    <string name="shop_list_notice">You can edit the shop by clicking the edit button in the top right corner, and long press the shop to block or delete</string>
    <string name="repetition">No daily repetition allowed</string>
    <string name="date">Date</string>
    <string name="amEat">amEat</string>
    <string name="only_eat">Only</string>
    <string name="after_eat">Eat later</string>
    <string name="am_eat">Eat Lunch</string>
    <string name="pm_eat">Eat Dinner</string>
    <string name="tomorrow_all_day">Tomorrow All Day</string>
    <string name="today_all_day">Today All Day</string>
    <string name="only_am">Lunch Only</string>
    <string name="only_pm">Dinner Only</string>
    <string name="notice">Friendly Reminder</string>
    <string name="notice_nexttime_message">Dinner will be available soon. Choose the next meal instead.</string>
    <string name="ok" translatable="false">OK</string>
    <string name="notice_nagative_button">I\'m going to eat dinner as a midnight snack!!!</string>
    <string name="notice_low_shops_message">Too few stores have been added. Would you like to add more?</string>
    <string name="let_s_goooooo" translatable="false">let\'s goooooo</string>
    <string name="notice_low_shop_nageative_botton">Maybe choose the next meal instead</string>
    <string name="notice_none_shops_message">No stores have been added yet. Would you like to add one?</string>
    <string name="notice_repeat_boom_message">Too few stores have been added. Repeated selections may cause the app to crash.</string>
    <string name="notice_repeat_boom_positive_botton">Tap the button to change</string>
    <string name="notice_delete_shop">Delete Shop</string>
    <string name="notice_delete_shop_confirm">Are you sure you want to delete this shop?</string>
    <string name="none_shops">No shops added</string>
    <string name="notice_delete_shop_nagative_bottom">Forget it, it\'s still worth eating</string>
    <string name="notice_all_shops_blocked_message">All shops are currently blocked. Please go to the shop list to re-enable them.</string>
    <string name="block_shop">Block Shop</string>
    <string name="block_shop_message">If this shop has not been open recently, we recommend blocking it.\nNote: Once blocked, this shop will no longer appear in the selection queue until you re-enable it.</string>
    <string name="unblock_shop">Unblock Shop</string>
    <string name="unblock_shop_message">Unblocking this shop will allow it to re-enter the selection queue. Continue?</string>
    <string name="add_shop">Add Shop</string>
    <string name="cancel">Cancel</string>
    <string name="current_vision_code">Current Version:</string>
    <string name="version">Version Information</string>
    <string name="no_record">No records</string>
    <string name="dialog_add_shop">Please enter the shop to add</string>
    <string name="current_vision">Current Version</string>
    <string name="update">Update</string>
    <string name="update_button">Check for Updates</string>
    <string name="auto_update_notice">Auto Update is Coming Soon</string>
    <string name="history_save_time">Keep History For</string>
    <string name="nav_home">home</string>
    <string name="version_notice_newst_version">You are using the latest version.</string>
    <string name="version_notice_network_request_failed">Network request failed. Please try again later.</string>
    <string name="version_last_check_update">Last update check:</string>
    <string name="version_new_version_publish">A new version is available. Would you like to update now?</string>
    <string name="confirm">confirm</string>
    <string name="version_enter_program">View Project Homepage</string>
    <string name="update_button_have">Update Now</string>
    <string name="history_cancel_change">Cancel Edit</string>
    <string name="history_change">Edit History</string>
    <string name="history_enter_change">Enter the text you want to modify</string>
    <string name="history_confirm">Confirm</string>
    <string name="list_notice_similar_message">When enabled, shops with similar names will be filtered out. However, some unrelated shops may also be mistakenly filtered due to similar names or addresses (e.g., “XX Store”). Are you sure you want to enable this feature?</string>
    <string name="history_change_am">Enter lunch item</string>
    <string name="history_change_pm">Enter dinner item</string>
    <string name="history_change_notice">If both fields are empty, no record will be saved. If only one field is filled, only one meal will be recorded.</string>
    <string name="similar">Duplicate shop names are not allowed</string>
    <string name="main_change">Edit Today’s Meals</string>
    <string name="notice_what_time_to_eat_next_time">"When do you plan to eat the next meal? "</string>
    <string name="time_mid">midday</string>
    <string name="time_night">evening</string>
    <string name="theme">Theme Management</string>
    <string name="color_mode">Color Mode</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="follow_system">Follow System</string>
    <string name="dynamic_color">Use Dynamic Color</string>
    <string name="card_height_setting">Card Height Setting</string>
    <string name="card_height_current">Current Height:</string>

    <string name="temp_block_menu_item">Temporarily Block</string>
    <string name="temp_block_choice_title">Choose an action</string>
    <string name="temp_block_title">Temporarily Block Shop</string>
    <string name="temp_block_message">A temporarily blocked shop is skipped when picking for the rest of the day. The block is released automatically when the new day starts (after 9:00 PM).</string>
    <string name="temp_block_success">Temporarily blocked: %1$s</string>
</resources>

