<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/history_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryActivity"
    android:layout_marginTop="30sp">

    <LinearLayout
        android:id="@+id/ll_history_header"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="0dp"
            android:layout_height="50sp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
            android:backgroundTint="@color/transparent"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_weight="9"
            android:text="@string/history"
            android:textSize="30sp"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_history_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:cardCornerRadius="10sp"
        android:layout_margin="10sp"
        app:layout_constraintTop_toBottomOf="@id/ll_history_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_history_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history_save_time"
                android:textSize="20sp"
                android:gravity="start"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="10sp" />

            <RadioGroup
                android:id="@+id/rg_date_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/tv_history_filter"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="5sp"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/rb_7days"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/filter_7_days"
                    android:textSize="16sp"
                    android:gravity="center" />

                <RadioButton
                    android:id="@+id/rb_10days"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/filter_10_days"
                    android:textSize="16sp"
                    android:gravity="center" />

                <RadioButton
                    android:id="@+id/rb_15days"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/filter_15_days"
                    android:textSize="16sp"
                    android:gravity="center" />

                <RadioButton
                    android:id="@+id/rb_30days"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/filter_30_days"
                    android:textSize="16sp"
                    android:gravity="center" />
            </RadioGroup>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <ListView
        android:id="@+id/lv_history"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5sp"
        android:dividerHeight="10sp"
        android:divider="@color/transparent"
        android:orientation="vertical"
        android:padding="10sp"
        app:layout_constraintTop_toBottomOf="@+id/card_history_filter"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
