<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30sp"
    android:orientation="vertical"
    tools:context=".ListActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="0dp"
            android:layout_height="50sp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
            app:tint="?attr/colorOnSurface" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_weight="8"
            android:text="@string/list"
            android:textColor="?attr/colorOnSurface"
            android:textSize="30sp"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/ib_edit"
            android:layout_width="0dp"
            android:layout_height="50sp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/baseline_edit_30"
            app:tint="?attr/colorOnSurface" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_check_box_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linearLayout2"
        android:orientation="horizontal">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_repetition"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/repetition"
            android:textSize="15sp"
            android:textColor="?attr/colorOnSurface" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_similar"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/similar"
            android:textSize="15sp"
            android:textColor="?attr/colorOnSurface" />


    </LinearLayout>

    <ListView
        android:id="@+id/lv_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="8sp"
        android:orientation="vertical"
        android:padding="10sp"
        app:layout_constraintTop_toBottomOf="@+id/ll_check_box_group"
        app:layout_constraintBottom_toTopOf="@+id/tv_notice"
        android:listSelector="@drawable/item_selector"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/shop_list_notice"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lv_list"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>
