<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30sp"
    android:orientation="vertical"
    tools:context=".VersionActivity">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_margin="5sp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="0dp"
            android:layout_height="50sp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
            app:tint="@color/title_color" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_weight="9"
            android:text="@string/version"
            android:textColor="@color/title_color"
            android:textSize="30sp"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10sp"
        android:layout_margin="10sp"
        app:layout_constraintTop_toBottomOf="@+id/ll">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="10sp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_vision_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:layout_marginTop="10sp"
                tools:ignore="MissingConstraints">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/current_vision"
                    android:textSize="25sp"
                    android:textColor="@color/title_color"
                    android:gravity="center_vertical"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/tv_current_version"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:textSize="25sp"
                    android:textColor="@color/title_color"
                    android:textStyle="bold"
                    android:layout_marginEnd="10sp"
                    android:gravity="center|end"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_check_update"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/update_button"
                    android:textSize="18sp"
                    app:cornerRadius="10dp"
                    app:layout_constraintTop_toBottomOf="@id/ll_vision_code"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="15dp"
                    android:backgroundTint="?attr/colorPrimaryVariant"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_auto_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                app:layout_constraintTop_toBottomOf="@+id/ll_vision_code"
                android:layout_margin="10sp"
                tools:ignore="MissingConstraints" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_enter_program"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/version_enter_program"
        android:textSize="20sp"
        android:layout_margin="10sp"
        app:cornerRadius="10sp"
        app:layout_constraintTop_toBottomOf="@id/card_update"/>

</androidx.constraintlayout.widget.ConstraintLayout>