<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2026 chenbrush
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_30sdp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title"
            android:textSize="110sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <!-- 结果卡片：保持固定高度，单行/双行由 MainFragment 动态调整约束居中 -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_text"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            app:cardCornerRadius="10sp"
            android:layout_margin="30sp"
            app:cardElevation="3sp"
            android:outlineAmbientShadowColor="@android:color/transparent"
            android:outlineSpotShadowColor="@android:color/transparent"
            app:layout_constraintBottom_toTopOf="@+id/btn_all_day"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="10sp">

                <!-- 两行结果文字：宽度占满卡片并居中，文字过长时自动缩小，避免显示不全 -->
                <TextView
                    android:id="@+id/tv_result_first_line"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:maxLines="2"
                    android:text="@string/result"
                    android:textSize="30sp"
                    app:autoSizeMaxTextSize="30sp"
                    app:autoSizeMinTextSize="14sp"
                    app:autoSizeStepGranularity="1sp"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintBottom_toTopOf="@id/tv_result_second_line"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_result_second_line"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:maxLines="2"
                    android:text=""
                    android:textSize="30sp"
                    app:autoSizeMaxTextSize="30sp"
                    app:autoSizeMinTextSize="14sp"
                    app:autoSizeStepGranularity="1sp"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_result_first_line" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


        <!-- 两个功能按钮：文字过长（如 Tomorrow All Day）时自动缩小，保持单行完整显示 -->
        <Button
            android:id="@+id/btn_all_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:layout_marginBottom="30dp"
            android:maxLines="1"
            android:text="@string/all_day"
            android:textSize="40sp"
            app:autoSizeMaxTextSize="40sp"
            app:autoSizeMinTextSize="22sp"
            app:autoSizeStepGranularity="1sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/btn_next_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:cornerRadius="10dp"
            android:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:maxLines="1"
            android:text="@string/next_time"
            android:textSize="40sp"
            app:autoSizeMaxTextSize="40sp"
            app:autoSizeMinTextSize="22sp"
            app:autoSizeStepGranularity="1sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_all_day"
            app:cornerRadius="10dp"
            android:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
